rgw: check size match for fetch_remote_obj

There are a lot of cases like target RGW instance restart/network issue
will cause http client and get_obj get(and put) an incomplete obj.

Ideally we should do checksum checks however due to ETAG is not useful
for multipart obj, lets check size as first step.

fixes https://tracker.ceph.com/issues/39992

Signed-off-by: Xiaoxi CHEN <xiaoxchen@ebay.com>